--- a/.travis.yml
+++ b/.travis.yml
@@ -1,26 +1,42 @@
+dist: xenial
+
 language: python
 
-sudo: false
+branches:
+  except:
+    - staging.tmp
+    - trying.tmp
 
 cache:
   directories:
     - $HOME/.cache/pip
 
-env:
-  - TOXENV=py27
-  - TOXENV=py33
-  - TOXENV=py34
-  #- TOXENV=py35
-  - TOXENV=flake8
-  - TOXENV=pylint
-  - TOXENV=docs
-  - TOXENV=check-manifest
-  #- TOXENV=check-readme
 matrix:
   include:
-    - python: 3.5
+    - python: 3.7
       env:
-      - TOXENV=py35
+      - TOXENV=py37
+    - python: 3.8
+      env:
+      - TOXENV=py38
+    - python: 3.7
+      env:
+      - TOXENV=flake8
+    - python: 3.7
+      env:
+      - TOXENV=pylint
+    - python: 3.7
+      env:
+      - TOXENV=docs
+    - python: 3.7
+      env:
+      - TOXENV=doctest
+    - python: 3.7
+      env:
+      - TOXENV=check-manifest
+    - python: 3.7
+      env:
+      - TOXENV=checkreadme
 
 before_install:
   - pip install codecov # for coverage
