--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,18 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27,py33,py34,py35,flake8,pylint,docs,check-manifest,checkreadme
+envlist = py37,py38,flake8,pylint,docs,check-manifest,checkreadme
 
 [testenv]
 commands = py.test --cov={envsitepackagesdir}/stringtopy -s {posargs}
+basepython =
+    py37: {env:TOXPYTHON:python3.7}
+    py38: {env:TOXPYTHON:python3.8}
+    flake8: {env:TOXPYTHON:python3}
+    pylint: {env:TOXPYTHON:python3}
+    docs: {env:TOXPYTHON:python3}
+    check-manifest: {env:TOXPYTHON:python3}
+    checkreadme: {env:TOXPYTHON:python3}
 deps =
     -rtest-requirements.txt
 
@@ -23,7 +31,8 @@ commands=
     flake8 --exclude={envsitepackagesdir}/stringtopy/_version.py {envsitepackagesdir}/stringtopy
 
 [testenv:pylint]
-deps=pylint
+deps=
+    -r pylint-requirements.txt
 commands=
     pylint {envsitepackagesdir}/stringtopy
 
