More to using azure pipelines

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,7 +10,8 @@ recursive-include tests *.py
 include pylintrc
 include tox.ini
 include pypi-intro.rst
-include appveyor.yml
-include bors.toml
 include pylint-requirements.txt
 exclude .deepsource.toml
+exclude bors.toml
+exclude azure-pipelines.yml
+recursive-exclude ci *
