--- a/tox.ini
+++ b/tox.ini
@@ -4,13 +4,14 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py37,py38,flake8,pylint,docs,check-manifest,checkreadme
+envlist = py37,py38,py39,flake8,pylint,docs,check-manifest,checkreadme
 
 [testenv]
 commands = py.test --cov={envsitepackagesdir}/stringtopy -s {posargs}
 basepython =
     py37: {env:TOXPYTHON:python3.7}
     py38: {env:TOXPYTHON:python3.8}
+    py39: {env:TOXPYTHON:python3.9}
     flake8: {env:TOXPYTHON:python3}
     pylint: {env:TOXPYTHON:python3}
     docs: {env:TOXPYTHON:python3}
