--- a/bors.toml
+++ b/bors.toml
@@ -1,6 +1,8 @@
 status = [
-  "continuous-integration/travis-ci/push",
-  #"continuous-integration/appveyor/branch",
+#  "continuous-integration/travis-ci/push",
+#  "continuous-integration/appveyor/branch",
+  "aragilar.stringtopy",
   "codecov/patch",
   "codecov/project",
 ]
+
